=CSS contrast fix

--- a/skins/Dark/grouphomepage.css
+++ b/skins/Dark/grouphomepage.css
@@ -15,7 +15,7 @@
 }
 
 .dateHeading {
-	background:#EEE;
+	background:#444;
 	border-bottom: 1px solid #666;
 }
 
